# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Thu Oct  8 2020 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- The connection properties  treat_clob_as_varchar  and  treat_blob_as_binary
  are now set to true by default within the JDBC driver.  This is done
  as it results by default in less memory usage, (much) faster response
  and better user experience for many generic JDBC applications (like
  SQuirreL SQL, DBeaver, etc) when fetching data from CLOB or BLOB result
  columns.  See release.txt for more information and how you can turn
  it off to get the old JDBC driver behavior if you require it.

* Wed Oct  7 2020 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Added support for new Java 8 java.sql.Types: Types.TIME_WITH_TIMEZONE and
  Types.TIMESTAMP_WITH_TIMEZONE.

* Wed Sep 23 2020 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Updated JDBC driver to comply with JDBC 4.2 interface now we compile
  for Java 8. This includes:
  - adding 8 methods to MonetCallableStatement
  - adding 2 methods to MonetDatabaseMetaData
  - adding 3 methods to MonetPreparedStatement
  - adding 4 methods to MonetResultSet
  - adding 8 methods to MonetStatement
- Corrected MonetDatabaseMetaData.getTypeInfo()
  - The LITERAL_PREFIX column now includes the required casting name for
    types: clob, inet, json, url, uuid and blob.
  - The SEARCHABLE column now returns typePredBasic instead of typeSearchable
    for type: blob.
  - The AUTO_INCREMENT column now returns false for types: hugeint, decimal,
    oid and wrd.

* Thu Sep 10 2020 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Removed support for deprecated MD5 encryption algorithm in MapiSocket.

* Wed Sep 9 2020 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected Statement.executeBatch() method. It now implicitly clears the
  batch buffer, ready to accept new addBatch() calls without the need for